--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-titles-demo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://bigfanjs.github.io/react-titles-demo",
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -9,9 +10,14 @@
     "styled-components": "^3.3.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
